--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+        <a class="page-link" href="/javadocs/1.1.0/">Javadocs</a>
       </div>
     </nav>
 
